--- a/api/package.json
+++ b/api/package.json
@@ -1,20 +1,17 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@prisma/client": "^6.9.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "init": "^0.1.2"
-  },
-  "description": ""
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0"
+  }
 }
