--- a/api/package.json
+++ b/api/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0"
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
-  "description": "",
   "devDependencies": {
     "prisma": "^6.14.0"
-  }
+  },
+  "description": ""
 }
