--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,3 @@
-DATABASE_URL="mysql://root@localhost:3306/allwearjs?schema=public&timezone=UTC"
+DATABASE_URL="mysql://root@localhost:3306/allwear?schema=public&timezone=UTC"
+PORT=3000
+JWT_SECRET=meusegredo
